--- a/drawer/index.html
+++ b/drawer/index.html
@@ -151,6 +151,45 @@
             border: 1px solid #333;
             display: block;
         }
+
+        #loading {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.9);
+            padding: 20px 40px;
+            border-radius: 8px;
+            border: 1px solid #333;
+            z-index: 1000;
+            display: none;
+            text-align: center;
+        }
+
+        #loading.show {
+            display: block;
+        }
+
+        #loading-text {
+            color: #fff;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+
+        .spinner {
+            border: 3px solid #333;
+            border-top: 3px solid #fff;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            margin: 0 auto;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body>
@@ -208,6 +247,11 @@
     </div>
 
     <div id="canvas-container"></div>
+
+    <div id="loading">
+        <div class="spinner"></div>
+        <div id="loading-text">Generating streamlines...</div>
+    </div>
 
     <script src="colors.js"></script>
     <script src="flow_field.js"></script>
