update color scale

--- a/drawer/index.html
+++ b/drawer/index.html
@@ -238,8 +238,7 @@
             <select id="colorScheme">
                 <option value="ocean">Ocean</option>
                 <option value="sunset">Sunset</option>
-                <option value="forest">Forest</option>
-                <option value="rainbow">Rainbow</option>
+                <option value="white">White</option>
             </select>
         </div>
 
