--- a/drawer/index.html
+++ b/drawer/index.html
@@ -31,6 +31,8 @@
             z-index: 100;
             width: 280px;
             border: 1px solid #222;
+            max-height: calc(100vh - 40px);
+            overflow-y: auto;
         }
 
         h1 {
@@ -38,6 +40,19 @@
             font-size: 16px;
             font-weight: normal;
             color: #fff;
+        }
+
+        h2 {
+            margin: 20px 0 10px 0;
+            font-size: 13px;
+            font-weight: normal;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            color: #bbb;
+        }
+
+        h2:first-of-type {
+            margin-top: 0;
         }
 
         .control-group {
@@ -93,6 +108,12 @@
             color: #fff;
             font-size: 11px;
             font-weight: bold;
+        }
+
+        .toggle-row {
+            display: flex;
+            align-items: center;
+            gap: 8px;
         }
 
         select {
@@ -196,6 +217,8 @@
     <div id="controls">
         <h1>Flow Field</h1>
 
+        <h2>Generation</h2>
+
         <div class="control-group">
             <label class="control-label">Data File</label>
             <input type="file" id="dataFile" accept=".json">
@@ -233,6 +256,8 @@
             <div class="control-description">Thickness of streamlines</div>
         </div>
 
+        <h2>Color</h2>
+
         <div class="control-group">
             <label class="control-label">Color Scheme</label>
             <select id="colorScheme">
@@ -240,6 +265,22 @@
                 <option value="sunset">Sunset</option>
                 <option value="white">White</option>
             </select>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label">
+                Depth Emphasis <span class="value" id="depthPowerValue">1.5</span>
+            </label>
+            <input type="range" id="depthPower" min="0.5" max="2.5" step="0.1" value="1.5">
+            <div class="control-description">&gt;1: deep areas change more · &lt;1: shallow areas change more</div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label">Invert Depth</label>
+            <div class="toggle-row">
+                <input type="checkbox" id="invertDepth">
+                <span style="font-size:12px; color:#ccc;">Swap near/far colors</span>
+            </div>
         </div>
 
         <button id="saveBtn">Save Image (S)</button>
