add svg export feature

--- a/drawer/index.html
+++ b/drawer/index.html
@@ -312,6 +312,7 @@
         </div>
 
         <button id="generateBtn" type="button">Generate Flow</button>
+        <button id="exportSvgBtn" type="button">Export for Laser (SVG)</button>
     </div>
 
     <div id="canvas-container"></div>
